# duolingo-react-native

./: .env.example  .gitignore  AGENTS.md  README.md  app.config.js  app.json  assets-env.d.ts  global.css  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json
.agents/skills/stream-react/: SKILL.md  builder-ui.md
.agents/skills/stream-swift/: design-matching.md
prompts/: 01-nativewind.md  02-design-theme.md  03-onboarding-ui.md  04-authentication-ui.md  05-clerk.md  06-content-system.md  07-language-ui.md  08-zustand.md  09-bottom-tab-nav.md  10-home-ui.md  11-lesson-ui.md  12-audio-lesson-ui.md  13-stream-integration.md  14-vision-agents.md  15-connection-to-ui.md  16-ai-teacher-improvements.md  17-live-captions.md  18-more-posthog.md  AGENTS.md
src/app/: _layout.tsx  index.tsx  language-selection.tsx  onboarding.tsx
src/components/: AuthInput.tsx  AuthScreen.tsx  CustomTabBar.tsx  LanguageCard.tsx  PlaceholderScreen.tsx  PrimaryButton.tsx  SocialButton.tsx  VerificationModal.tsx
src/constants/: images.ts  videos.ts
src/data/: languages.ts  lessons.ts  units.ts
src/hooks/: useAppFonts.ts  useLessonCall.ts
src/lib/: clerkAuth.ts  posthog.ts  streamServer.ts  tokenCache.ts
src/store/: languageStore.ts
src/theme/: colors.ts  index.ts  typography.ts
src/types/: learning.ts
vision-agent/: .env.example  Dockerfile  README.md  agent.py  pyproject.toml
vision-agent/duolingo_clone_vision_agent.egg-info/: PKG-INFO  SOURCES.txt
vision-agent/vocalingo_vision_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+23 files in other folders)
