[project]
name = "duolingo-clone-vision-agent"
version = "0.1.0"
description = "Voice-only AI language teacher for the Duolingo clone Expo app."
requires-python = ">=3.10,<3.14"
dependencies = [
  "python-dotenv>=1.2.2",
  "vision-agents==0.6.7",
  "vision-agents-plugins-getstream==0.6.7",
  "vision-agents-plugins-openai==0.6.7",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
]

[tool.vision-agents.agent]
entrypoint = "agent:runner"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that call real model services",
]
